RM-1414 fixed vertical label alignment
git-svn-id: https://svn.re-motion.org/svn/Remotion/trunk@13866 cb0deee2-328e-b949-94ea-fb3139fab790

--- a/Remotion/ObjectBinding/Web/Res/HTML/BocBooleanValue.css
+++ b/Remotion/ObjectBinding/Web/Res/HTML/BocBooleanValue.css
@@ -1,6 +1,3 @@
-/*  This style file is only used for documenting the classes. 
-    It is not automatically included by the BocBooleanValue. */
-
 .bocBooleanValue
 {
 }
@@ -11,6 +8,11 @@
 
 .bocBooleanValue.disabled
 {
+}
+
+.bocBooleanValue span
+{
+  vertical-align: middle;  
 }
 
 .bocBooleanValue.disabled img
